--- a/modules/core/client/scss/global/header.scss
+++ b/modules/core/client/scss/global/header.scss
@@ -25,14 +25,16 @@ $header-height-sm: 5.2rem;
 		overflow: hidden;
 
 		a {		
-			text-decoration: none;	
+			display: block;
+			width: 145px;
+			height: 5rem;
+			overflow: hidden;
 			border: 1px solid transparent;
+			background-image: url('/modules/core/client/img/brand/mem-logo-inverted-sm.png');
+			background-position: center;
+			text-indent: -100rem;	
 		}
 
-		img {
-			margin-top: 4px;
-			height: 42px;
-		}
 	}
 	
 	.navbar-nav {
@@ -78,9 +80,11 @@ $header-height-sm: 5.2rem;
 		}
 
 		.navbar-brand {
-			img {
-				margin-top: 2px;
-				height: 55px;
+			a {		
+				width: 190px;
+				height: 6rem;
+				background-image: url('/modules/core/client/img/brand/mem-logo-inverted.png');
+				background-position: center;
 			}
 		}
 		
