--- a/modules/recent-activity/client/views/recent-activity-list.html
+++ b/modules/recent-activity/client/views/recent-activity-list.html
@@ -5,21 +5,17 @@
 	</div>
 
 	<div class="view-body-container news-admin-view">
-		<div class="button-bar clearfix">
-			<a  ng-if="application.userCan.createNews" class="btn btn-default btn-sm pull-left" ui-sref="admin.recentactivity.create()">
+		<div class="button-bar">
+			<a class="btn btn-default btn-sm" ng-if="application.userCan.createNews" ui-sref="admin.recentactivity.create()">
 				<span class="glyphicon glyphicon-plus"></span>
 				<span>Add News & Announcements</span>
 			</a>
-			<div class="pull-right">
-				<!-- <show-filter x-toggle-filter="toggleFilter"></show-filter> -->
-			</div>
 		</div>
-		<section class="panel panel-default">
-			<table ng-table="tableParams" x-show-filter="true" class="table">
-				<!-- NEWS ROW ITEM TEMPLATE -->
+		<div class="table-container">
+			<table class="recent-activity-admin-table table table-hover" ng-table="tableParams" x-show-filter="true">
 				<tr ng-repeat="o in $data">
 					<td data-title="'Headline'" filter="{'headline':'text'}" sortable="'headline'">
-            <h2 class="news-title" ng-class="{clickable: o.project}" ng-click="s.onNewsClick(o, $event)">{{o.headline}}</h2>
+            			<h2 class="news-title" ng-class="{clickable: o.project}" ng-click="s.onNewsClick(o, $event)">{{o.headline}}</h2>
 						<div ng-init="toggleProject.desc = (false)">
 							<p class="news-content">{{ o.content | maxWords:30:toggleProject.desc }}</p>
 							<div class="show-more" ng-if="(o.content | wordCount) > 30">
@@ -30,51 +26,44 @@
 							</div>
 						</div>
 					</td>
-          <td class="type-col"
-              header-class="'type-col'"
-              data-title="'Project'"
-              filter="{'projectName':'text'}"
-              sortable="'projectName'">{{o.projectName}}</td>
-					<td class="type-col"
-              header-class="'type-col'"
-              data-title="'Type'"
-              filter="{type:'select'}"
-              filter-data="s.typeArray"
-              sortable="'type'">{{o.type}}</td>
-          <td class="type-col"
-              header-class="'type-col'"
-              data-title="'Priority'"
-              filter="{priorityDesc:'select'}"
-              filter-data="s.priorityDescArray"
-              sortable="'priorityDesc'" >{{o.priorityDesc}}</td>
-          <td class="type-col"
-              header-class="'type-col'"
-              data-title="'Active'"
-              filter="{active:'select'}"
-              filter-data="s.activeDescArray"
-              sortable="'activeDesc'" >{{o.activeDesc}}</td>
-          <td class="date-col"
-              header-class="'date-col'"
-              data-title="'Date Added'"
-              sortable="'dateAdded'" >{{o.dateAdded | date}}</td>
-
-					<!-- <td data-title="'Priority'" class="text-center" sortable="'priority'" >{{o.priority}}</td> -->
-
-					<td class="actions-col action-x1" header-class="'actions-col action-x1'">
-						<a ng-if="application.userCan.createNews" class="btn btn-sm btn-default" title="Edit News Item"
-							ng-click="$event.stopPropagation()"
-							ui-sref="admin.recentactivity.edit({recentActivityId:o._id})">
-							<span class="glyphicon glyphicon-pencil"></span>
-						</a>
+					<td class="type-col" header-class="'type-col'"
+						data-title="'Project'"
+						filter="{'projectName':'text'}"
+						sortable="'projectName'">{{o.projectName}}</td>
+					<td class="type-col" header-class="'type-col'"
+						data-title="'Type'"
+						filter="{type:'select'}"
+						filter-data="s.typeArray"
+						sortable="'type'">{{o.type}}</td>
+					<td class="type-col" header-class="'type-col'"
+						data-title="'Priority'"
+						filter="{priorityDesc:'select'}"
+						filter-data="s.priorityDescArray"
+						sortable="'priorityDesc'" >{{o.priorityDesc}}</td>
+					<td class="type-col" header-class="'type-col'"
+						data-title="'Active'"
+						filter="{active:'select'}"
+						filter-data="s.activeDescArray"
+						sortable="'activeDesc'" >{{o.activeDesc}}</td>
+					<td class="date-col" header-class="'date-col'"
+						data-title="'Date Added'"
+						sortable="'dateAdded'" >{{o.dateAdded | date}}</td>
+					<td class="actions-col" header-class="'actions-col x1'">
+						<div class="btns">
+							<a class="btn icon-btn" title="Edit News Item" 
+								ng-if="application.userCan.createNews"
+								ng-click="$event.stopPropagation()"
+								ui-sref="admin.recentactivity.edit({recentActivityId:o._id})">
+								<span class="glyphicon glyphicon-pencil"></span>
+							</a>
+						</div>
 					</td>
-				</tr><!-- / NEWS ROW ITEM TEMPLATE -->
-
+				</tr>
 				<tr ng-if="!$data || $data.length === 0">
 					<td colspan="4">No records found.</td>
 				</tr>
-
 			</table>
-		</section>
+		</div>
 
 	</div>
 </div>
