Fixing CSSLint rule

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -3,7 +3,7 @@
 	<nav class="navbar">
 		<div class="navbar-header">
 			<div class="navbar-brand">
-				<a ui-sref="projects">BC Mine Information</a>
+				<a ui-sref="projects"></a>
 			</div>
 		</div>
 
