--- a/modules/legislation/client/views/legislation.html
+++ b/modules/legislation/client/views/legislation.html
@@ -4,7 +4,13 @@
         <div class="container-inner">
             <div class="hb-txt">
                 <h1>Legislation</h1>
-                <p class="mb-2">Mining in British Columbia is regulated by both the provincial and federal governments</p>
+                <p>Mining in British Columbia is regulated by both the provincial and federal governments</p>
+                <div class="hb-btns">
+					<a class="btn hero-btn inverted" href="#provincialStatutes"
+                        du-smooth-scroll offset="100"><span>Provincial Statutes</span></a>&nbsp;
+					<a class="btn hero-btn inverted" href="#federalStatutes"
+                        du-smooth-scroll offset="100"><span>Federal Statutes</span></a>&nbsp;
+				</div>
             </div>
         </div>
     </div>
@@ -18,7 +24,7 @@
                 <p>Mining activities in British Columbia are subject to a variety of different provincial and federal regulations. The main pieces of legislation that govern major mines in BC are the Environmental Assessment Act, the Mines Act and the Environmental Management Act. You can learn more about these acts and others below. Please note that this is not meant to be an exhaustive list of all regulations that apply to mining activities.</p>
             </section>
             <hr>
-            <section>
+            <section id="provincialStatutes">
                 <h3>Provincial Statutes</h3>
                 <section class="mt-0">
                     <h4>Environmental Assessment Act (Environmental Assessment Office)</h4>
@@ -110,7 +116,7 @@
                 </section>
             </section>
             <hr>
-            <section>
+            <section id="federalStatutes">
                 <h3>Federal Statutes</h3>
                 <section>
                     <h4>Fisheries Act</h4>
