--- a/modules/authorizations/client/views/authorizations.html
+++ b/modules/authorizations/client/views/authorizations.html
@@ -6,13 +6,19 @@
         <div class="container-inner">
             <div class="hb-txt">
                 <h1>Authorizations</h1>
-                <p>Major mines in British Columbia require authorizations from several different federal and provincial agencies. They can vary from project to project, but the three key authorizations for major mines in BC are environmental assessment certificates, Mines Act permits and Environmental Management Act permits.</p>
+                <p>Major mines in British Columbia require authorizations from several different federal and provincial agencies. They can vary from project to project, but the three key authorizations for major mines in BC are environmental assessment (EA) certificates, Mines Act permits and Environmental Management Act permits.</p>
+                <div class="hb-btns">
+					<a class="btn hero-btn inverted" href="#eaProcess"
+                        du-smooth-scroll offset="100"><span>EA Process</span></a>&nbsp;
+					<a class="btn hero-btn inverted" href="#majorPermits"
+                        du-smooth-scroll offset="100"><span>Major Permits</span></a>&nbsp;
+                    <a class="btn hero-btn inverted" href="#otherAuths"
+                        du-smooth-scroll offset="100"><span>Other Authorizations</span></a>
+				</div>
             </div>
         </div>
     </div>
 </div>
-
-<a href="" target="_blank"></a>
 
 <div class="container" id="anchor-point">
     <div class="row">
