Changing 'reclamation-and-securities' to 'reclamation'
- Fixed routes
- Updating links

--- a/modules/lifecycle/client/views/mining-lifecycle.html
+++ b/modules/lifecycle/client/views/mining-lifecycle.html
@@ -57,7 +57,7 @@
             <section id="operation">
                 <h3>Operation</h3>
                 <p>The operation phase begins once a mine is constructed and starts producing. Mining operations include extraction and processing of ore as well as waste disposal and ore transport.</p>
-                <p><a ui-sref="reclamation-and-securities">Progressive reclamation</a> begins during the mine construction phase and continues until a site is fully reclaimed after mine closure.</p>
+                <p><a ui-sref="reclamation">Progressive reclamation</a> begins during the mine construction phase and continues until a site is fully reclaimed after mine closure.</p>
             </section>
             <hr>
             <section class="mb-0" id="closure">
@@ -71,7 +71,7 @@
                 <h4>Ongoing Lifecycle Activities</h4>
                 <div class="section-body">
                     <h5>Reclamation</h5>
-                    <p><a ui-sref="reclamation-and-securities">Progressive reclamation</a> begins during the construction phase and continues until a site is fully reclaimed after mine closure.</p>
+                    <p><a ui-sref="reclamation">Progressive reclamation</a> begins during the construction phase and continues until a site is fully reclaimed after mine closure.</p>
                     <hr>
                     <h5>Monitoring &amp; Reporting</h5>
                     <p class="mb-0">Monitoring includes environmental (e.g., <a ui-sref="water-quality">water quality</a>) testing and assessments of structures (e.g., <a ui-sref="tailings-management">tailings management facilities</a>). Monitoring activities begin long before a mine is constructed in order to gather baseline information on the site.</p>
