--- a/modules/topics/client/views/topics-of-interest.html
+++ b/modules/topics/client/views/topics-of-interest.html
@@ -38,25 +38,9 @@
                 <h3>Reclamation</h3>
                 <p>Since 1969, companies have been required by law to reclaim all lands disturbed by mining and related activities in British Columbia. BC was one of the first provinces in Canada to enact mine reclamation legislation, and the first to extend this policy to exploration sites. BC’s reclamation laws ensure that land, watercourses and cultural heritage resources are returned to a safe and environmentally sound state.</p>
                 <div class="content-links">
-                    <a class="btn content-btn slide-r-btn" ui-sref="reclamation-and-securities"><span>Read More</span><i class="material-icons">arrow_forward</i></a>
+                    <a class="btn content-btn slide-r-btn" ui-sref="reclamation"><span>Read More</span><i class="material-icons">arrow_forward</i></a>
                 </div>
             </section>
         </main>
-        <!--
-        <aside class="col-lg-4">
-            <section class="mt-0">
-                <h4>Related Documents</h4>
-                <ul class="mmti-side-list">
-                    <li>Content TBD</li>
-                </ul>
-            </section>
-            <section>
-                <h4>External Links &amp; Resources</h4>
-                <ul class="mmti-side-list">
-                    <li>Content TBD</li>
-                </ul>
-            </section>
-        </aside>
-        -->
     </div>
 </div>
