--- a/modules/topics/client/views/topics-of-interest.html
+++ b/modules/topics/client/views/topics-of-interest.html
@@ -5,6 +5,17 @@
             <div class="hb-txt">
                 <h1>Topics of Interest</h1>
                 <p>Learn more about how water, tailings and reclamation activities are managed at major mine sites in British Columbia.</p>
+                <div class="hb-btns">
+					<a class="btn hero-btn inverted" href="#waterQuality" 
+                        du-smooth-scroll offset="100"><span>Water Quality</span>
+                    </a>&nbsp;
+					<a class="btn hero-btn inverted" href="#tailingsManagement" 
+                        du-smooth-scroll offset="100"><span>Tailings Management</span>
+                    </a>&nbsp;
+                    <a class="btn hero-btn inverted" href="#reclamation" 
+                        du-smooth-scroll offset="100"><span>Reclamation</span>
+                    </a>
+				</div>
             </div>
         </div>
     </div>
@@ -18,7 +29,7 @@
                 <p>The Province strives to ensure that all mines in British Columbia operate in a safe and environmentally responsible manner that protects heritage and other resources for future generations. This area of the BC Mine Information website profiles key topics of interest regarding mining activities in BC.</p>
             </section>
             <hr>
-            <section id="water">
+            <section id="waterQuality">
                 <h3>Water Quality</h3>
                 <p>Mines that release effluent can potentially cause changes to the receiving environment. Released effluent may impact the water quality in streams, lakes and groundwater, which in turn has the potential to affect local aquatic life and/or other water uses.</p>
                 <div class="content-links">
@@ -26,7 +37,7 @@
                 </div>
             </section>
             <hr>
-            <section>
+            <section id="tailingsManagement">
                 <h3>Tailings Management</h3>
                 <p>Tailings are a by-product of mining. They are finely ground rock and mineral particles that remain following processing and extraction of targeted resources (e.g., minerals containing metals such as copper or gold), and they may also contain chemicals used in the extraction process.</p>
                 <div class="content-links">
@@ -34,7 +45,7 @@
                 </div>
             </section>
             <hr>
-            <section class="mb-0">
+            <section class="mb-0" id="reclamation">
                 <h3>Reclamation</h3>
                 <p>Since 1969, companies have been required by law to reclaim all lands disturbed by mining and related activities in British Columbia. BC was one of the first provinces in Canada to enact mine reclamation legislation, and the first to extend this policy to exploration sites. BC’s reclamation laws ensure that land, watercourses and cultural heritage resources are returned to a safe and environmentally sound state.</p>
                 <div class="content-links">
