--- a/modules/core/client/views/st-template.html
+++ b/modules/core/client/views/st-template.html
@@ -11,7 +11,7 @@
 	</li>
 
 	<li ng-show="pages.indexOf(2) == -1"><a
-			ng-click="selectPage(pages[0])"><span class="glyphicon glyphicon-chevron-left"></a>
+			ng-click="selectPage(pages[0])"><span class="glyphicon glyphicon-chevron-left"/></a>
 	</li>
 
 	<li ng-repeat="page in pages" ng-class="{active: page==currentPage}"><a
@@ -19,7 +19,7 @@
 	</li>
 
 	<li ng-show="pages.indexOf(numPages -1) == -1"><a
-			ng-click="selectPage(pages[pages.length - 1])"><span class="glyphicon glyphicon-chevron-right"></a>
+			ng-click="selectPage(pages[pages.length - 1])"><span class="glyphicon glyphicon-chevron-right"/></a>
 	</li>
 
 	<li ng-show="pages.indexOf(numPages) == -1"><a
