--- a/modules/search/client/scss/search-widget.scss
+++ b/modules/search/client/scss/search-widget.scss
@@ -109,6 +109,79 @@ $search-widget-btn-offset: 0.1rem;
     }
 }
 
+$selected-color: #5091cd;
+$selected-border-color: #4187c9;
+$inverted-text-color: #FFF;
+
+tr.selected td {
+    border-top: none !important;
+}
+
+.search-table {
+    .checkbox-col {
+        width: 4rem;
+    }
+    .date-added-col {
+        width: 20rem;
+    }
+    .status-col {
+        width: 8rem;
+    }
+    .actions-col {
+        width: 8rem;
+        .btn-group {
+            opacity: 1;
+        }
+    }
+    .row-actions {
+        display: block;
+        //position: absolute;
+        //top: 0.6rem;
+        right: 2.5rem;
+        .btn {
+            padding: 0;
+            width: 3.4rem;
+            height: 3.4rem;
+            text-align: center;
+            color: #000;
+        }
+    }
+    .selected {
+        /*  Force over-write the tr.selected styling from core.  */
+        color: $inverted-text-color !important;
+        background: $selected-color !important;
+        border-top: none !important;
+        border-bottom: 1px solid $selected-border-color !important;
+    }
+    .document-info {
+        @extend .flex-row;
+        .icon {
+            @include flex(0 0 auto);
+            .avatar {
+                margin-right: 0.75rem;
+                text-align: center;
+                .glyphicon {
+                    margin-top: -0.2rem;
+                    font-size: 3rem;
+                    vertical-align: top;
+                }
+            }
+        }
+        .text {
+            @extend .flex-column;
+            @include flex(1 1 auto);
+            .name {
+                @include flex(1 1 auto);
+            }
+            .description {
+                @include flex(1 1 auto);
+            }
+        }
+    }
+}
+
+
+
 @media (max-width: 750px) {
     .search-widget {
         .dropdown-menu {
